package LabTwo.Staff;

public abstract class FullTimeEmployee extends Employee {
	protected double monthlyBasicSalary;

	/** 获取月薪
	 * @return 月薪
	 */
	public abstract double getMonthlySalary();

}
